Update user's email in git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = David Montesdeoca
-	email = info@davidmontesdeoca.net
+	email = backpackerhh@gmail.com
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
