--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,12 +47,12 @@ unbind C-b
 bind C-a send-prefix
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # create 'v' alias for selecting text
-bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy v begin-selection
 
 # paste
 unbind C-p
@@ -95,15 +95,15 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
 ###########################
 
 # color status bar
-set -g status-bg colour235
-set -g status-fg white
+set -g status-style bg=colour235
+set -g status-style fg=white
 
 # highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-style fg=black
+set-window-option -g window-status-current-style bg=green
 
 # set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
+set -g pane-border-style fg=colour235
+set -g pane-border-style bg=black
+set -g pane-active-border-style fg=green
+set -g pane-active-border-style bg=black
